# Calendary-and-ToDo-List

./: .gitignore  README.md  TimeSheet.md
.github/workflows/: telegram-notify.yml
project/: CMakeLists.txt
project/CCC_Cute_Cpp_Calendar/: .gitignore  CMakeLists.txt  dialog.ui  main.cpp  tododialog.ui
project/CCC_Cute_Cpp_Calendar/gui/: dialog.cpp  dialog.h  dialog.ui  eventdialog.cpp  eventdialog.h  eventdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tododialog.cpp  tododialog.h  tododialog.ui
project/CCC_Cute_Cpp_Calendar/logic/: calendar.cpp  calendar.h  client.cpp  client.h  event.cpp  event.h  todo.cpp  todo.h  worker.cpp  worker.h
project/client/: CMakeLists.txt  Calendar_ToDo_List_it_IT.ts  main.cpp
project/server/: server.php  server_old.php
project/server/data/: db.sqlite
